[tool.poetry]
name = "example-sphinx-myst"
version = "0.1.0"
description = ""
authors = ["daikichiba9511 <daikichiba.tech.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.4.0"
myst-parser = "^0.17.0"
linkify-it-py = "^1.0.3"
sphinx_bernard_theme = "^0.1.12"
sphinxawesome-theme = "^3.3.0"
sphinxcontrib-mermaid = "^0.7.1"
numpy = "^1.22.2"
pandas = "^1.4.1"
sphinx-autobuild = "^2021.3.14"
mecab-python3 = "^1.0.5"
unidic-lite = "^1.0.8"
unidic = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
